--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -21,6 +21,7 @@
         <module>shoulder-starter-mysql</module>
         <module>shoulder-starter-operation-log</module>
         <module>shoulder-starter-crypto</module>
+        <module>shoulder-starter-beanmap</module>
 
         <module>shoulder-starter-auth-session</module>
         <module>shoulder-starter-auth-token</module>
