--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -302,6 +302,13 @@
                 <version>${shoulder.version}</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>cn.itlym</groupId>
+                <artifactId>shoulder-starter-beanmap</artifactId>
+                <version>${shoulder.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-starter-auth-session</artifactId>
