--- a/.drone.yml
+++ b/.drone.yml
@@ -47,7 +47,7 @@ steps:
       # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程 -B batch 批量处理 -V Display version information
       - mvn clean deploy -Dmaven.test.skip=true -pl shoulder-dependencies -am
       - mvn clean deploy -Dmaven.test.skip=true -pl shoulder-parent -am
-      - export MAVEN_OPTS="-Xmx400m -Xms400m -XX:MaxPermSize=90m"
+      - export MAVEN_OPTS="-Xmx400m -Xms400m"
       - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
       #      - mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
       - echo 'FINISHED deploy!!'
