--- a/.drone.yml
+++ b/.drone.yml
@@ -14,19 +14,7 @@ clone:
   # 需要 clone
   disable: false
 
-
 steps:
-  #  - name: 发现SNAPSHOT依赖
-  #    image: cnlym/maven:3-jdk-11-alpine-aliyun
-  #    commands:
-  #      - mvn dependency:tree -Dincludes=:::*-SNAPSHOT
-  #      - echo 'FINISHED dependencyCheck!'
-  # 自动化升级依赖项目版本号到release版本
-  #      # mvn versions:use-releases
-  #      # mvn versions:use-next-releases
-  #      # mvn versions:use-latest-releases
-  #      # mvn versions:display-dependency-updates
-
   - name: 编译、打包、发布到 maven 仓库
     image: cnlym/maven:3-jdk-21-alpine-aliyun
     # 加速，对于这种稳定的容器
@@ -35,22 +23,16 @@ steps:
       # 异步快速检查依赖
       - curl --location --request POST 'http://10.10.10.1:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true' --form 'notifyReason=CI-<a href="https://git.itlym.cn/gogs/${DRONE_REPO_NAME}">${DRONE_REPO_NAME}::${DRONE_REPO_BRANCH}</a><br> with <a href="https://drone.itlym.cn/gogs/${DRONE_REPO_NAME}/${DRONE_BUILD_NUMBER}">Drone Build-${DRONE_BUILD_NUMBER}</a><br>' || echo '======= SKIP dependency check. ======='
       # 改成部署前签名，否则不会上传
-      # ---------【【【发布】】】------ release 版本时候更换 version，正式发布前还需要：清空所有jar，然后运行 shoulder-demos 保证发布功能全部ok；检查 shoulder-maven-plugin.version
-      #- sed -i 's#-SNAPSHOT</shoulder.version>#</shoulder.version>#g' pom.xml
-      #- sed -i 's#-SNAPSHOT</shoulder.version>#</shoulder.version>#g' shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
-      #- find . -name "pom.xml" | xargs sed -i 's#-SNAPSHOT</version><!-- shoulder-version -->#</shoulder.version>#g'
-      #
-      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' pom.xml
-      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_package -->#<phase>package</phase><!-- ACTIVE_WITH_package -->#g' shoulder-parent/pom.xml
-      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_verify -->#<phase>verify</phase><!-- ACTIVE_WITH_verify -->#g' pom.xml
-      - sed -i 's#<phase>deploy</phase><!-- ACTIVE_WITH_verify -->#<phase>verify</phase><!-- ACTIVE_WITH_verify -->#g' shoulder-parent/pom.xml
-      # 2C 每个可用 C 2线程；deploy 主要是发布，与网络相关，-T 4 4个线程 -B batch 批量处理 -V Display version information
-      #- mvn clean deploy -Dmaven.test.skip=true -pl shoulder-dependencies -am
-      #- mvn clean deploy -Dmaven.test.skip=true -pl shoulder-parent -am
-      #- export MAVEN_OPTS="-Xmx400m -Xms400m"
-      #- mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
-      - mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
-      - echo 'FINISHED deploy!!'
+
+      #- mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
+      # 自动化升级依赖项目版本号到release版本
+      - mvn versions:use-releases
+      - cat pom.xml |grep 'shoulder-version'
+      #- mvn versions:use-next-releases
+      # mvn versions:use-latest-releases
+      # mvn versions:display-dependency-updates
+      - bash script/install.sh
+      - echo 'FINISHED CICD!!'
 #
       #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
       # - https://github.com/crawlab-team/artipub
