更新 '.drone.yml'

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,8 +24,8 @@ steps:
       - curl --location --request POST 'http://10.10.10.1:12345/projects/create' --form 'email=cn_lym@foxmail.com' --form 'pomXml=@shoulder-dependencies/pom.xml' --form 'notifyInstantlyAfterCheck=true' --form 'notifyReason=CI-<a href="https://git.itlym.cn/gogs/${DRONE_REPO_NAME}">${DRONE_REPO_NAME}::${DRONE_REPO_BRANCH}</a><br> with <a href="https://drone.itlym.cn/gogs/${DRONE_REPO_NAME}/${DRONE_BUILD_NUMBER}">Drone Build-${DRONE_BUILD_NUMBER}</a><br>' || echo '======= SKIP dependency check. ======='
       # 安装到本地
       - bash scripts/prepareRelease.sh
-      - bash scripts/deploy.sh
-      #      - bash scripts/install.sh
+      #- bash scripts/deploy.sh
+      - bash scripts/install.sh
       - echo '========FINISHED CICD=========='
 #
       #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
