--- a/.drone.yml
+++ b/.drone.yml
@@ -26,6 +26,10 @@ steps:
       - bash scripts/prepareRelease.sh
       #- bash scripts/deploy.sh
       - bash scripts/install.sh
+      # install script ==========
+      - export MAVEN_OPTS="-Xmx400m -Xms400m"
+      - mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
+      # install script end ==========
       - echo '========FINISHED CICD=========='
 #
       #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
