--- a/.drone.yml
+++ b/.drone.yml
@@ -29,6 +29,9 @@ steps:
       - export MAVEN_OPTS="-Xmx400m -Xms400m"
       - mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
       # install script end ==========
+      # deploy script ==========
+      #- mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
+      # deploy script end ==========
       - echo '========FINISHED CICD=========='
 #
       #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
