--- a/.drone.yml
+++ b/.drone.yml
@@ -30,7 +30,7 @@ steps:
       #
       # ========== deploy script ==========
       - bash scripts/prepareRelease.sh
-      - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C -rf :shoulder-archetype-simple
+      - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
       # ========== deploy script end ==========
       - echo '========FINISHED CICD=========='
 #
