--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.8-SNAPSHOT</version><!-- shoulder-version -->
+        <version>0.8</version><!-- shoulder-version -->
     </parent>
 
     <groupId>${groupId}</groupId>
@@ -19,7 +19,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <shoulder.version>0.8-SNAPSHOT</shoulder.version><!-- shoulder-version -->
+        <shoulder.version>0.8</shoulder.version><!-- shoulder-version -->
 
         <errorCodePrefix>0x000b</errorCodePrefix>
     </properties>
