--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>0.8-SNAPSHOT</version><!-- shoulder-version -->
+        <version>0.8</version><!-- shoulder-version -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
@@ -45,7 +45,7 @@
             <dependency>
                 <groupId>cn.itlym</groupId>
                 <artifactId>shoulder-dependencies</artifactId>
-                <version>0.8-SNAPSHOT</version><!-- shoulder-version -->
+                <version>0.8</version><!-- shoulder-version -->
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -392,7 +392,7 @@
                     <version>${sonar-maven-plugin.version}</version>
                 </plugin>
 
-                <!-- 管理版本号 mvn versions:set -DnewVersion=1.1-SNAPSHOT -->
+                <!-- 管理版本号 mvn versions:set -DnewVersion=NEW_VERSION -->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
