--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -21,7 +21,7 @@
         <java.version>17</java.version>
         <shoulder.version>0.8</shoulder.version><!-- shoulder-version -->
 
-        <errorCodePrefix>0x000b</errorCodePrefix>
+        <errorCodePrefix>"0x000b"</errorCodePrefix><!-- todo 请确保每个应用错误码唯一 -->
     </properties>
 
     <dependencies>
@@ -32,38 +32,44 @@
         </dependency>
 
         <!-- 数据库相关 -->
-        <!--<dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-starter-mysql</artifactId>
-        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>cn.itlym</groupId>-->
+        <!--            <artifactId>shoulder-starter-mysql</artifactId>-->
+        <!--        </dependency>-->
+        <!-- demo 工程，可使用 h2 链接 -->
+        <!--        <dependency>-->
+        <!--            <groupId>com.h2database</groupId>-->
+        <!--            <artifactId>h2</artifactId>-->
+        <!--        </dependency>-->
+        <!-- 对象转换，若不习惯使用 SpringConvert，可选择 mapstruct -->
+        <!--        <dependency>-->
+        <!--            <groupId>org.mapstruct</groupId>-->
+        <!--            <artifactId>mapstruct</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.mapstruct</groupId>-->
+        <!--            <artifactId>mapstruct-processor</artifactId>-->
+        <!--        </dependency>-->
 
-        <!-- 对象转换 mapstruct （可选） -->
-        <!--<dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-        </dependency>-->
+        <!-- AOP操作日志 使用说明：https://github.com/ChinaLym/shoulder-framework/tree/master/shoulder-build/shoulder-base/shoulder-operation-log -->
+        <!--        <dependency>-->
+        <!--            <groupId>cn.itlym</groupId>-->
+        <!--            <artifactId>shoulder-operation-log</artifactId>-->
+        <!--        </dependency>-->
 
-        <!-- 操作日志 -->
-        <!--<dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-operation-log</artifactId>
-        </dependency>-->
+        <!-- 应用监控相关（附工具包：可监控的线程池） -->
+        <!--        <dependency>-->
+        <!--            <groupId>cn.itlym</groupId>-->
+        <!--            <artifactId>shoulder-starter-monitor</artifactId>-->
+        <!--        </dependency-->
 
-        <!-- 监控相关（附工具包：可监控的线程池） -->
-        <!--<dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-starter-monitor</artifactId>
-        </dependency>-->
-
-        <!-- 支持集群 -->
-        <!--<dependency>
-            <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-cluster</artifactId>
-        </dependency>-->
+        <!-- SpringBoot 热更新插件，修改代码无需重启 -->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-devtools</artifactId>-->
+        <!--            <scope>runtime</scope>-->
+        <!--            <optional>true</optional>-->
+        <!--        </dependency>-->
 
         <!-- =================================== test =================================== -->
         <dependency>
@@ -82,20 +88,19 @@
 
     <build>
         <plugins>
+            <!-- SpringBoot 标准插件,默认由maven打成jar包运行-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-
-            <!-- 自动生成错误码以及对应的翻译 可以在 target 目录生成所有实现 ErrorCode 接口错误码枚举类的翻译文件 -->
+            <!-- Shoulder 插件 自动生成错误码以及对应的翻译 说明文档  -->
             <plugin>
                 <groupId>cn.itlym.shoulder</groupId>
                 <artifactId>shoulder-maven-plugin</artifactId>
                 <configuration>
                     <errorCodePrefix>${errorCodePrefix}</errorCodePrefix>
                     <scanPackage>${package}</scanPackage>
-                    <useCache>true</useCache>
                 </configuration>
             </plugin>
 
