--- a/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
@@ -6,12 +6,15 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.8</version><!-- shoulder-version -->
+        <version>0.8.1</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
 
     <name>shoulder-crypto</name>
     <artifactId>shoulder-crypto</artifactId>
+    <description>
+        Shoulder 基础模块，提供了核心的加解密能力，如AES、RSA、ECC、MD5、SHA等先进安全算法，并额外实现绝密级别的加密算法。
+    </description>
 
     <dependencies>
 
