--- a/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-cluster/pom.xml
@@ -5,12 +5,15 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.8</version><!-- shoulder-version -->
+        <version>0.8.1</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-cluster</artifactId>
+    <description>
+        Shoulder 面向集群/分布式部署模式的应用，提供了一些企业级解决方案，如分布式锁、全局 id、分布式 Session。
+    </description>
 
     <dependencies>
 
