--- a/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto-negotiation/pom.xml
@@ -5,12 +5,15 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.8</version><!-- shoulder-version -->
+        <version>0.8.1</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-crypto-negotiation</artifactId>
+    <description>
+        Shoulder 基础模块，基于 shoulder-crypto 实现先进的加密算法协商算法，比传统的 DH 协商算法性能显著更高，更安全。
+    </description>
 
     <dependencies>
 
