--- a/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
@@ -5,13 +5,15 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.8</version><!-- shoulder-version -->
+        <version>0.8.1</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-operation-log</artifactId>
-
+    <description>
+        Shoulder 基础模块，围绕操作日志设计了可扩展记录框架，包含 AOP、异步化、跨线程、批处理、输出格式可定制、输出源可扩展、过程可监听的灵活实现。
+    </description>
 
     <dependencies>
 
