--- a/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
+++ b/shoulder-build/shoulder-base/shoulder-web/src/main/resources/shoulder/dictionary/dictionaryEnums.html.config
@@ -10,7 +10,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <!-- 自定义样式及脚本 -->
     <style>
-        /* 添加你的自定义样式 */
+        /* 添加您的自定义样式 */
     </style>
     <script>
         $(document).ready(function () {
