--- a/.drone.yml
+++ b/.drone.yml
@@ -9,10 +9,9 @@ name: default
 #  path: /test
 
 clone:
-  # 不需要拉取 commit 历史，加快速度
-  depth: 1
-  # 需要 clone
+  # 拉代码，只拉最新，不需要下载 commit 历史记录，加快速度
   disable: false
+  depth: 1
 
 steps:
   - name: 编译、打包、发布到 maven 仓库
@@ -30,54 +29,10 @@ steps:
       #
       # ========== deploy script ==========
       - bash scripts/prepareRelease.sh
-      - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
+      - mvn clean deploy -P release --offline -Dmaven.test.skip=true -B -V -T 1.5C
       # ========== deploy script end ==========
       - echo '========FINISHED CICD=========='
-#
-      #  - name: 根据 commit 自动生成 CHANGELOG、README https://github.com/mbinary-toys/csdn-tools
-      # - https://github.com/crawlab-team/artipub
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock autogenerate changeLog!'
-#
-#  - name: 在CSDN、OSCHINA发文章宣布发布一个新版本
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock autogenerate new version blog!'
-#
-#  - name: 创建此版本的维护分支（创建一个新分支，并更新到下一个次版本）
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-      #- git -branch 新分支
-      #- git 修改版本号
-      #- git push
-#      - echo 'mock autogenerate maintain branch!'
-#
-#  - name: 在官网，start上添加该版本
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock notify Official website!'
-#
-#  - name: 在GitHub上更新发行说明，有哪些新特性，修复了哪些bug(issue号)，感谢该版本的参与者
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock notify Official website!'
-#
-#  - name: 关闭/创建里程碑、标签。TODO spring 开源的 label robot
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock close issue!'
-#
-#  - name: 分支清理，删掉里程碑内的无用分支，包括开发分支，发布分支
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock delete useless branch!'
-#
-#  - name: 在其他频道、社交平台上宣布发行
-#    image: cnlym/maven:3-jdk-11-alpine-aliyun
-#    commands:
-#      - echo 'mock announcement of issuance!'
-#
+
   - name: 构建结果通知 Build Notification. --- with DingTalk
     image: guoxudongdocker/drone-dingtalk
     # 加速，对于这种稳定的容器
