--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,7 @@ steps:
       #      - mvn clean install -P release -Dmaven.test.skip=true -B -V -T 1.5C
       # ========== install script end ==========
       #
+      - sleep 1000
       # ========== deploy script ==========
       - bash scripts/prepareRelease.sh
       - mvn clean deploy -P release -Dmaven.test.skip=true -B -V -T 1.5C
