--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -11,6 +11,10 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>shoulder-dependencies</artifactId>
+    <name>${project.artifactId}</name>
+    <description>
+        Shoulder 所有的依赖项版本管理模块，仅包含依赖项与其版本定义，不包含代码。
+    </description>
 
     <!-- dependencies version definition -->
     <properties>
