--- a/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-api-doc/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-api-doc</artifactId>
-
+    <name>${project.artifactId}</name>
     <description>
         Shoulder 基于 OpenApi 规范做了依赖选型，通过扫描标准 Swagger 注解自动生成 api 生成文档。该模块仅几Kb，仅包含依赖管理。
     </description>
