--- a/shoulder-build/shoulder-base/shoulder-security/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-security/pom.xml
@@ -10,8 +10,8 @@
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
 
-    <name>shoulder-security</name>
     <artifactId>shoulder-security</artifactId>
+    <name>${project.artifactId}</name>
     <description>
         Shoulder 基础模块，基于 Spring Security + Spring Boot Web的安全模块，除了提供用户认证、授权、会话管理等基础功能，还允许轻松更换认证模式，如
         Session / Token（JWT） 模式切换。
