--- a/shoulder-build/shoulder-base/shoulder-validation/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-validation/pom.xml
@@ -11,9 +11,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-validation</artifactId>
+    <name>${project.artifactId}</name>
     <description>
-        Shoulder 基于 Spring Boot
-        Validation轻量的Jar，提供了枚举、Json、白名单等校验注解，同时提供接口可查看各接口校验规则，甚至可以自动上报Api网关，实现快速开发，高效管理，降低前后端沟通成本。
+        Shoulder 基于 Spring Boot Validation 的轻量Jar，提供了枚举、Json、白名单等校验注解，同时提供接口可查看各接口校验规则，甚至可以自动上报Api网关，实现快速开发，高效管理，降低前后端沟通成本。
     </description>
 
     <dependencies>
