--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -12,6 +12,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>shoulder-autoconfiguration</artifactId>
+    <name>${project.artifactId}</name>
+    <description>
+        Shoulder 默认功能激活模块，包含了默认 Bean 装配的实现，以便在 spring-boot 环境开箱即用。
+    </description>
 
     <dependencies>
 
